Fixed the issue with line spacing on projects

--- a/static/css/application.css
+++ b/static/css/application.css
@@ -600,10 +600,6 @@ h3 {
 	padding-left: 0;
 }
 
-#project-details li {
-  line-height: 26px;
-}
-
 #project-details .detail-value{
 	display: inline-block;
 	margin-bottom: 3px;
